# Pywr-DRB

./: .buildinfo  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  analyze_demand.ipynb  analyze_diversions.ipynb  custom_pywr.py  dev_note.md  docstring_template.md  drb.py  drb_inflow_prep.py  drb_make_figs.py  drb_make_model.py  drb_model_map.html  drb_run_all.sh  drb_run_sim.py  explore_streamflows.ipynb  genindex.html  get_usgs_inflows.py  intro.html  objects.inv  pending_tasks.md  predict_ungaged_streamflow.ipynb  prep_input_data.py  profiling.py  py-modindex.html  pyproject.toml  pywr_drb_node_data.py  pywrdrb_run_all_historic_simulations.sh  pywrdrb_run_diagnostics_paper.sh  pywrdrb_run_ensemble_simulation.sh  pywrdrb_run_full_historic_reconstruction.sh  pywrdrb_run_historic_reconstruction_simulations.sh  pywrdrb_run_historic_reconstructions.sh  pywrdrb_run_wrf_hydro_scenarios.sh  release_note.md  reorganize_nwm_data.ipynb  requirements.txt  results_set_options.html  (+9 more)
.doctrees/: environment.pickle  intro.doctree  results_set_options.doctree
API_References/: api_reference_template.html  api_references.html  custom_pywr.html  drb_make_figs.html  drb_make_model.html  drb_run_all.html  drb_run_sim.html  plotting_functions.html  prep_input_data.html  pywrdrb.custom_parameters.html  pywrdrb.data_processing.html  pywrdrb.drb_make_model.html  pywrdrb.parameters.html  pywrdrb.plotting.html  pywrdrb.prep_input_data.html
DRB/: drb.html  drb_history.html  drb_hydrology.html  drb_planning_management.html
DRB_spatial/: DRB_model_map.ipynb  DRB_spatial.ipynb  Get_node_basin_geometry.ipynb  README.md  Visualize_node_gauge_pairs.ipynb  drb_model_map.html  make_interactive_model_map.py  node_basin_geometries.csv  node_basin_geometries.dbf  node_basin_geometries.prj  node_basin_geometries.shp  node_basin_geometries.shx  node_basin_ids.csv  nwmv21_unmanaged_gauge_metadata.csv
Getting_Started/: getting_started.html  quick_start.html  setup_model.html
Model/: pywr_drb.html  pywr_drb_inflow_scenarios.html  pywr_drb_model_nodes.html  pywr_drb_overview.html  pywr_drb_resops.html
Overview/: overview.html
Supplemental/: data_summary.html  node_list.html  pub.html  supplemental.html  synthetic_generation.html
_images/: nhmv10_interactive_streamflow_stack.html  nwmv21_interactive_streamflow_stack.html
_sources/: intro.md  results_set_options.md
api/: api.html  parameters.html  plotting.html  post.html  pre.html  pywrdrb.html  utils.html
basin_resources/: basin_resources.html  drb_overview.html  reading_list.html
developer_guide/: docstring_template.md
diagrams/: model_diagrams.py
docs/: _config.yml  _toc.yml  conf.py  doc_guide.md  drb_model_map.html  intro.md  references.bib  requirements.txt  results_set_options.md  update_jupyter_kernels.py
examples/: Tutorial 01 Installation.html  Tutorial 01 Introduction to PywrDRB.html  Tutorial 02 Prepare Input Data.html  Tutorial 02 Run Simulation.html  Tutorial 03 Load Results.html  Tutorial 03 Model Parameters.html  Tutorial 04 Accessing Data.html  Tutorial 04 Using Customized Data To Run Model.html  examples.html
experiments/: pywr_recorder_speedtest.py  pywrdrb_cprofile.py  pywrdrb_profiling.py  pywrdrb_profiling.sh  pywrdrb_workflow_timing.py
input_data/: Node_Withdrawl_Scaling_Factor.csv  USGS_01431270.txt  catchment_inflow_WEAP_24Apr2023_gridmet.csv  catchment_inflow_wrf1960s_calib_nlcd2016.csv  catchment_inflow_wrf2050s_calib_nlcd2016.csv  deliveryNJ_DRCanal_extrapolated.csv  deliveryNJ_WEAP_23Aug2022_gridmet.csv  deliveryNJ_WEAP_23Aug2022_gridmet_extrapolated.csv  deliveryNYC_ODRM_extrapolated.csv  deliveryNYC_WEAP_23Aug2022_gridmet.csv  gage_flow_WEAP_23Aug2022_gridmet.csv  gw_avg_wateruse_Pywr-DRB_Catchments.csv  inflows_PUB_10172022.csv  inflows_WEAP_23Aug2022_gridmet.csv  inflows_clean.csv  inflows_obs_scaled_2.csv  node_predicted_streamflows_10172022.csv  predicted_nonnyc_gage_flow_nhmv10.csv  predicted_nonnyc_gage_flow_nhmv10_withNYCObsScaled.csv  predicted_nonnyc_gage_flow_nwmv21.csv  predicted_nonnyc_gage_flow_nwmv21_withNYCObsScaled.csv  releases_WEAP_23Aug2022_gridmet.csv  storageObs_WEAP_23Aug2022_gridmet.csv  storages_WEAP_23Aug2022_gridmet.csv  sw_avg_wateruse_Pywr-DRB_Catchments.csv
model_data/: drb.json  drb_model_base.json  drb_model_constants.csv  drb_model_dailyProfiles.csv  drb_model_edges.csv  drb_model_edges_dev.csv  drb_model_full.json  drb_model_full_cp.json  drb_model_istarf_conus.csv  drb_model_monthlyProfiles.csv  drb_model_nodes.csv  drb_model_nodes_dev.csv  drb_model_parameters.csv  drb_model_parameters_save.csv  drb_model_sheets.xlsx  drb_model_usgs_data_sources.csv  drb_model_weeklyProfiles.csv  profiles.xlsx
notebooks/: .Pywr-DRB Tutorial 03 Model Parameters.ipynb.icloud  Project 1.ipynb  Pywr-DRB Tutorial 03 Model Parameters.ipynb  Replicate Pywr-DRB Diagnostic Experiment.ipynb  Tutorial 01 Installation.ipynb  Tutorial 01 Introduction to PywrDRB.ipynb  Tutorial 02 Prepare Input Data.ipynb  Tutorial 02 Run Simulation.ipynb  Tutorial 03 Load Results.ipynb  Tutorial 04 Accessing Data.ipynb  Tutorial 04 Using Customized Data To Run Model.ipynb  Tutorial Output Data.ipynb  tutorial_plan.md  (+18 more)
(+724 files in other folders)
