[project]
name = "pywrdrb"
version = "0.0.1"
packages = [
  { include = "pywrdrb", from = "src" }
]
authors = [
    {name = "Chung-Yi Lin", email = "philip928lin@gmail.com"},
    {name = "Trevor Amestoy", email = "tja73@cornell.edu"},
    {name = "Andrew Hamilton", email = "andrew.hamilton.water@gmail.com"},
    {name = "Marilyn Smith", email = "ms3654@cornell.edu"}
]
license = { file = "LICENSE" }
description = "An open-source Python model for water availability and drought risk assessment in the Delaware River Basin"
readme = { file = "README.md", content-type = "text/markdown" }  # Specify README with content type
dependencies = [
    "numpy",
    "pandas",
    "scipy",
    "scikit-learn",
    "statsmodels",
    "matplotlib",
    "seaborn",
    "git+https://github.com/philip928lin/PathNavigator.git",

    "pywr",
    "h5py",
    "pytest",
    "mpi4py",
    "hatch"

    "torch",
    "bmipy",
    "uncertainty_toolbox",
    
    "pygeohydro",
    "hydroeval",
    "altair",
    "jupyter-book",
    "ghp-import",
    "shapely",
    "folium",
    "pynhd",
    "geopandas",
    "pyarrow",
    "contextily",
    ]

[project.optional-dependencies]
dev = [
    "ipython",
]
lint = [
    "pre-commit>=2.20.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = [
    "src/**/*",
]

[tool.hatch.build.package]
# Force hatch to treat 'src' as the root. 
# It ensures your top-level 'pywrdrb' inside 'src' is discovered.
source = "src"

[tool.hatch.build.targets.wheel]
sources = ["src"]

[tool.hatch.build.data]
include = [
  "pywrdrb/input_data/**/*",
]

[tool.black]
line-length = 88
target-version = ["py310", "py311", "py312"]

[tool.hatch.envs.default]
dependencies = [
    "pytest",
]

# Note: hatch need to be installed in the environment to use the hatchling build backend.